# fadicut

./: FADICUT.md
.claude/: RALPH_GOAL.md
ae-plugins/: README.md  com.fadi.srt-importer  install.sh
ae-plugins/com.fadi.fadifx/: index.html
ae-plugins/com.fadi.fadifx/CSXS/: manifest.xml
ae-plugins/com.fadi.fadifx/css/: styles.css
ae-plugins/com.fadi.fadifx/js/: main.js
ae-plugins/com.fadi.fadifx/jsx/: host.jsx
ae-plugins/com.fadi.fadirange/: index.html
ae-plugins/com.fadi.fadirange/CSXS/: manifest.xml
ae-plugins/com.fadi.fadistrobe/: index.html
apps/web/: .env.example
bridge/: .gitignore  README.md  asset_roots.toml  pyproject.toml  requirements.txt  run.sh  verify_effects.py
bridge/api/: __init__.py  health.py  jobs.py  media.py  projects.py  render.py  staging.py
bridge/assets/: __init__.py  api.py  catalog.py  cli.py  media.py  probe.py  proxy.py  roots.py  staging.py  watcher.py
bridge/bridge/: __init__.py  __main__.py  app.py  auth.py  config.py
bridge/jobs/: __init__.py  demo.py  models.py  queue.py
bridge/projects/: INTEGRATION.md  __init__.py  models.py  store.py
bridge/render/: __init__.py  blob_track.py  fadi_grade.py  fadi_strobe.py  fadishoot_overlays.py  meandu.py  micrographics.py  morphloop.py  orchestrator.py  song_context_provider.py  speedramp.py
bridge/render/beatgrid/: __init__.py  _detect_worker.py  api.py  detector.py  runner.py
contracts/: README.md  codegen.py  pyproject.toml  validate.py
contracts/fadi_contracts/: __init__.py  fadi_edl.py  song_context.py
tasks/: lessons.md  todo.md
(+45 files in other folders)
